<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_essay"
            android:icon="@drawable/ic_home"
            android:title="@string/essay" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_photo"
            android:title="@string/photo" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/ic_bell"
            android:title="@string/comment" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
    </group>

    <item android:title="@string/personality">
        <menu>
            <item
                android:id="@+id/nav_night_mode"
                android:icon="@mipmap/ic_night"
                android:title="@string/night_mode"
                app:actionLayout="@layout/drawer_switch"
                app:showAsAction="always" />
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_drawer_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_drawer_setting"
                android:title="@string/tools" />
        </menu>
    </item>

</menu>
